
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EXIT_FAILURE ;
 int fprintf (int ,char*,...) ;
 int stderr ;

int ussage (char *args) {
 fprintf (stderr, "Ussage %s [options] <target host>\n", args);
 fprintf (stderr, "\t-t <num>\t target (0 for listing)\n");
 fprintf (stderr, "\t-x <address>\t give your own adress in hex (0xbffffc03)\n");
 fprintf (stderr, "\t-o <timeout>\t time between bruteforce attempts (default 5)\n");
 fprintf (stderr, "\t-s <steps>\t steps for bruteforce (default 15)\n");
 fprintf (stderr, "\t-p <port>\t use an other port then 25\n");
 fprintf (stderr, "\t-n <nutcase>\t default is 35\n");
 fprintf (stderr, "\t-a <align>\t alignment\n");
 fprintf (stderr, "\t-b\t\t bruteforce mode\n");
 fprintf (stderr, "\t-c\t\t check if target is vulnable\n");

 fprintf (stderr, "\t-h\t\t this help :)\n");
 return EXIT_FAILURE;
}
